--- a/main.css
+++ b/main.css
@@ -37,10 +37,26 @@
     100% {transform:translateX(0)}
 }
 .jolypote-jardin {
-    text-align: center;
+    max-width: 35rem;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    padding:.5rem;
+    border-radius: .5rem;
+    background:url('./images/flower_background.webp');
+    border:3px solid rgb(200, 105, 105);
+}
+.jolypote-jardin-text{
+    background-color: rgb(254, 234, 255);
+    padding:.3rem;
+    border-radius: .3rem;
+    display: inline-block;
+    color:rgb(150, 72, 72);
 }
 .jolypote-jardin > img {
     width:20rem;
+    border:2px solid rgb(200, 105, 105);
+    border-radius:.3rem;
 }
 .alex-container {
     display:flex;
