--- a/main.css
+++ b/main.css
@@ -104,6 +104,10 @@
     text-align: center;
     background-color: rgb(255, 255, 210);
 }
+.plage-iolynei {
+    text-align: center;
+    background-color: rgb(255, 210, 210);
+}
 .foufou {
     position:relative;
     margin:1rem;
