--- a/gallerie/style.css
+++ b/gallerie/style.css
@@ -5,14 +5,18 @@
 .gallerie {
     display:grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows:repeat(20,1fr);
+    grid-template-rows:repeat(18,1fr);
     gap: .5rem;
     margin:1rem;
-    max-width:40rem;
-    height:100rem;
+    max-width:50rem;
+    aspect-ratio: 1/3;
 }
 .img {
     width:100%;
+}
+.description {
+    height:auto;
+    font-size: .7em;
 }
 .item {
     background-color: red;
