--- a/gallerie/style.css
+++ b/gallerie/style.css
@@ -1,3 +1,7 @@
+body {
+    font-family: 'Tangerine',serif;
+    font-size: 1.8em;
+}
 .container {
     display:flex;
     justify-content: center;
@@ -15,33 +19,32 @@
     width:100%;
 }
 .description {
-    /* height:auto; */
-    /* font-size: .7em; */
+    text-align: center;
+}
+h1 {
+    text-align: center;
 }
 .item {
-    background-color: red;
+    background-color: rgb(236, 240, 216);
     border-radius: .5rem;
     padding:1rem;
 }
 .item-1 {
-    grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-start: 1;
+    grid-column-end: 5;
     grid-row-start: 2;
-    grid-row-end:5;
     transform: rotateZ(3deg);
 }
 .item-2 {
-    grid-column-start: 5;
-    grid-column-end: 7;
+    grid-column-start: 4;
+    grid-column-end: 6;
     grid-row-start: 4;
-    /* grid-row-end: 7; */
-    transform: rotateZ(-2deg);
+    transform: rotateZ(-4deg);
 }
 .item-3 {
     grid-column-start:1;
     grid-column-end: 5;
     grid-row-start:7;
-    grid-row-end:10;
     transform: rotateZ(-1deg);
 }
 .item-4 {
