--- a/theatre/theatre.css
+++ b/theatre/theatre.css
@@ -1,10 +1,27 @@
 *{
     padding:0;
     margin:0;
+    font-family:"Comic Sans MS","Comic Sans",sans-serif;
 }
 body {
     height:100vh;
     width:100vw;
+}
+#start {
+    padding:1rem;
+    font-size: 2em;
+}
+.cursor {
+    cursor:pointer;
+}
+.entract {
+    background-color: rgb(65, 65, 65);
+    color:white;
+    padding:1rem;
+    font-size: 1.5em;
+    max-width:25rem;
+    text-align: center;
+    border-radius: 1rem;
 }
 .background {
     width:100%;
